# cv-profet

./: .gitignore  LICENSE  README.md  cv_analyze.py  cv_builder.py  install.sh  profet.py  pyproject.toml
CV_builder/: README.md  builder.py  config.py  infretis_example.toml  main.py  pyrightconfig.json  simulationrunner.py  wham_weights.py
CV_builder/CV_frame_data/: README.md  context.py  math_utils.py
CV_builder/CV_frame_data/examples/: load_cp2k_aux.py  neighborhood.py  reaction_center.py  wannier_geom.py  wannier_mapper.py
CV_builder/CV_manager/: README.md  base.py  minimal_suite.py
CV_builder/CV_manager/cvs/: cv_distance.py
CV_builder/storage/: aggregator.py  h5_writer.py  report.py
CV_builder/topology/: README.md  base.py  topology.py  xyz_reader.py
CV_builder/topology/examples/: cp2k_water_ion.py  debug_nuclear_ids.py  lammps_reader.py  ref_loader.py
example/: infretis.toml  infretis_data.txt
example/load/1/: energy.txt  order.txt  traj.txt
example/load/104/: energy.txt  order.txt  traj.txt
example/load/107/: energy.txt  order.txt  traj.txt
example/load/110/: energy.txt  order.txt  traj.txt
example/load/111/: energy.txt  order.txt  traj.txt
example/load/113/: energy.txt  order.txt  traj.txt
example/load/114/: energy.txt  order.txt  traj.txt
example/load/118/: energy.txt  (+2 more)
ppa/: README.md  analyze.py  config_loader.py  core.py  cv_utils.py  plots.py  ppa-infretis.toml  screener.py
ppa/pp_functions/: savitzky_infRETIS.py  wham_helpers.py
test/: conftest.py  test_cli_smoke.py  test_launchers.py  test_math_utils.py  test_profet_cli.py
(+250 files in other folders)
